<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <Switch
        android:id="@+id/weather_sw_current"
        android:layout_width="121dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:onClick="currentClicked"
        android:text="Current"
        app:layout_constraintStart_toEndOf="@+id/weather_etext_address"
        app:layout_constraintTop_toBottomOf="@+id/weather_ptext_title" />

    <TextView
        android:id="@+id/weather_ptext_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/weather_ptext_title_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weather_etext_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/weather_ptext_address_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_ptext_title" />

    <Button
        android:id="@+id/weather_butt_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:onClick="searchClicked"
        android:text="@string/weather_butt_search_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_etext_address" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_butt_search"
        app:layout_constraintVertical_bias="0.448">

        <TextView
            android:id="@+id/weather_ptext_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:maxWidth="200dp"
            android:scrollHorizontally="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/weather_ptext_coords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:textSize="14sp" />

        <TableLayout
            android:id="@+id/weather_tl_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="479dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>